# RASTRE-dpp

./: .gitignore  CMakeLists.txt  build.sh  conanfile.txt  debug_build.sh  dummy_job.sh  lint.sh  readme.md  users.txt
run_scripts/: run_sparse.sh  run_synthetic.sh
scripts/: run_dense.sh  run_dense_generated.sh  run_sparse_all_algos_generated.sh  run_sparse_generated.sh  run_sparse_randgreedi_generated.sh
scripts/UserMode/: ConstructPuAndCu.py  text.txt  users.txt
scripts/dataset_generators/: dataset_generator.cpp  generate_data.py
scripts/example_jobs/: mpi_usermode_movielens.sh  run_dense.sh  run_movielense.sh  run_sparse_generated.sh  run_sparse_randgreedi_generated.sh  run_streaming_generated.sh  run_user_mode.sh  truncated_sparse_generated.sh
src/: create_user_file.cpp  find_approximation_set.cpp  get_user_mode_scores.cpp  local_streaming_find_approximation_set.cpp  log_macros.h  mpi_find_approximation_set.cpp  preprocess_data.cpp  single_machine_greedy_find_approximation_set.cpp  single_machine_streaming_find_approximation_set.cpp  streaming_find_approximation_set.cpp  tests.cpp
src/covariance_matrix/: covariance_matrix.h
src/data_tools/: base_data.h  blocked_data_loader.h  data_formater.h  data_loader.h  data_row.h  data_row_factory.h  data_row_visitor.h  data_saver.h  data_tools_tests.h  dot_product_visitor.h  matrix_builder.h  normalizer.h  tests.h  to_binary_visitor.h  user_mode_data.h
src/representative_subset_calculator/: correctness_comparison_tests.h  fast_representative_subset_calculator.h  lazy_fast_representative_subset_calculator.h  lazy_representative_subset_calculator.h  naive_representative_subset_calculator.h  representative_subset.h  representative_subset_calculator.h  sendAll_subset_calculator.h  tests.h  user_mode_tests.h
src/representative_subset_calculator/buckets/: bucket.h  bucketController.h  tests.h
src/representative_subset_calculator/buffers/: bufferBuilder.h  buffer_builder.h  buffer_builder_visitor.h  tests.h
src/representative_subset_calculator/kernel_matrix/: kernel_matrix.h  relevance_calculator.h  relevance_calculator_factory.h  relevance_kernel_matrix.h  tests.h
src/representative_subset_calculator/orchestrator/: app_data.h  app_data_constants.h  mpi_orchestrator.h  orchestrator.h  single_machine_orchestrator.h  tests.h
src/representative_subset_calculator/similarity_matrix/: similarity_matrix.h  tests.h
src/representative_subset_calculator/streaming/: bucket.h  bucket_titrator.h  candidate_consumer.h  candidate_seed.h  communication_constants.h  greedy_streamer.h  loading_receiver.h  mpi_rank_buffer.h  mpi_receiver.h  mpi_streaming_classes.h  naive_receiver.h  rank_buffer.h  receiver.h  receiver_interface.h  send_request.h  streaming.h  streaming_subset.h  synchronous_queue.h  tests.h
src/representative_subset_calculator/timers/: timers.h
src/similarity_matrix/: similarity_matrix.h  tests.h
src/user_mode/: test.h  user_data.h  user_score.h  user_subset.h
